k8s/nird/minio/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: elixir-uit-ns11105k
spec:
  serviceName: minio-service
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      enableServiceLinks: false
      containers:
        - name: minio
          image: minio/minio:latest
          args: [ "server", "/data", "--console-address", ":9001" ]
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          volumeMounts:
            - name: minio-data
              mountPath: /data
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: api
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: api
            initialDelaySeconds: 20
            periodSeconds: 10
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: c4fd2db5-aef8-4916-a2af-80a24e9eca48
